--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Mi curso de github</h1>
+        <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam sint sequi nam a molestiae magnam, dolor aliquid suscipit numquam. Neque possimus voluptates magni aliquid cupiditate dicta illum nobis esse distinctio.</P>
     </header>
 </body>
 </html>
