--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
         <h1>Mi curso de github</h1>
         <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam sint sequi nam a molestiae magnam, dolor aliquid suscipit numquam. Neque possimus voluptates magni aliquid cupiditate dicta illum nobis esse distinctio.</P>
     </header>
+    <main>
+        <h2>coder</h2>
+    </main>
 </body>
 </html>
