--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
     <main>
         <h2>coder</h2>
     </main>
+    <section>
+        <ul>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+        </ul>
+    </section>
 </body>
 </html>
